[package]
name = "amethyst-rhusics"
version = "0.3.3"
authors = [
    "Simon Rönnberg <seamonr@gmail.com>",
    "Thomas O'Dell <thomas_odell@trsolutions.biz>"
]
edition = "2018"

repository = "https://github.com/amethyst/amethyst-rhusics.git"
homepage = "https://github.com/amethyst/amethyst-rhusics.git"

license = "MIT/Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/amethyst-rhusics"
description = "Integration of `amethyst` and `rhusics`"

keywords = ["gamedev", "amethyst", "physics"]

[dependencies]
amethyst_error = { git = "https://github.com/amethyst/amethyst"}
amethyst_core = { git = "https://github.com/amethyst/amethyst"}
amethyst_renderer = { git = "https://github.com/amethyst/amethyst"}
rhusics-ecs = { version = "0.8", git = "https://github.com/trsoluti/rhusics", features = ["serde"] }
rhusics-core = { version = "0.8", git = "https://github.com/trsoluti/rhusics", features = ["specs", "serde"] }
shrev = "*"
# collision = { git = "https://github.com/rustgd/collision-rs", features = ["serde"]}
collision = { version = "0.20", features = ["serde"] }
nalgebra = "0.17"
cgmath = "0.17"

[dev-dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst" }
genmesh = "*"
rand = "*"
shred = "*"
shred-derive = "*"
