[package]
name = "amethyst-rhusics"
version = "0.4.0"
authors = ["Simon Rönnberg <seamonr@gmail.com>"]

repository = "https://github.com/amethyst/amethyst-rhusics.git"
homepage = "https://github.com/amethyst/amethyst-rhusics.git"

license = "MIT/Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/amethyst-rhusics"
description = "Integration of `amethyst` and `rhusics`"

keywords = ["gamedev", "amethyst", "physics"]

[dependencies]
amethyst_core = { version = "0.5" }
amethyst_renderer = { version = "0.10.1" }
rhusics-ecs = { version = "0.7", features = ["serde"] }
rhusics-core = { version = "0.7", features = ["specs", "serde"] }
shrev = "1.0"
collision = { version = "0.18", features = ["serde"]}
cgmath = "0.16.1"

[dev-dependencies]
amethyst = { version = "0.10" }
genmesh = "0.5"
rand = "0.3"
shred = "0.7"
shred-derive = "0.5"
